anna adding citations from crime section

--- a/heckman.bib
+++ b/heckman.bib
@@ -1,6 +1,45 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
+% added by Andres
+
+@TechReport{licensed,
+    title = {{Licensed Day Care Facilities in North Carolina}},
+    year = {1971},
+    author ={{Department of Social Services}}
+}
+@TechReport{durham,
+    title = {{Durham's Share in Day Care - A Taskforce Study}},
+    year = {1973},
+    author ={{Community Planning Services}}
+}
+@TechReport{adhoc,
+    title = {{Letter from Ad Hoc Committee of Professionals in Child
+Care Services}},
+    year = {1974},
+    author ={{Ad Hoc Committee of Professionals in Child Care Services}}
+}
+@TechReport{study,
+    title = {{Day Care Cost Study}},
+    year = {1982},
+    author ={{Administrative Branch Office of Day Care Services}}
+}
+@misc{sue,
+    title = {{Personal Communication with Sue Russell, President of
+Child Care Services Association}},
+    author = {Hojman, Andr\'es and Kuperman, Sylvi},
+    year ={2015},
+  howpublished = {personal communication}
+}
+@misc{clifford,
+    title = {{Personal Communication with Richard Clifford, Senior
+Researcher at Frank Porter Graham Center, NC}},
+    author = {Hojman, Andr\'es and Kuperman, Sylvi},
+    year ={2015},
+  howpublished = {personal communication}
+}
+
+%%
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
