--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -20,6 +20,8 @@ University of Southern California \and
 Mar\'{i}a Jos\'{e} Prados \\
 University of Southern California \and
 Joshua Shea \\
+The University of Chicago \and 
+Jake C. Torcasso \\
 The University of Chicago}
 \date{First Draft: January 5, 2016\\ This Draft: \today}
 \maketitle
@@ -369,7 +371,7 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 
 \section{Results} \label{appendix:results}
 
-\textbf{[JLG: Professor, we are displaying this in a separate file because the file is monstrous. We have separately attach it. It contains the treatment effects estimates on all 95 outcomes for all the hypothesis we have discussed. That is why we presented a selected variety of outcomes in the main paper.]}
+\noindent \textbf{ See separate file ``Results Appendix''.}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{D.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{D.\arabic{table}}
@@ -744,37 +746,107 @@ Q_i = \mathbf{W}_i \gamma^{Q} + \varepsilon^{Q}_i, \label{eq:selq}
 
 \noindent Finally, we note that our methodology in Section~\ref{section:methodology} and the results we present in Section~\ref{section:results} account for the remainder of randomization compromises, as when the families moved or abandoned the study later on. \textbf{7. The results are not greatly sensitive to adjusting for the rest of the randomization compromises}, as we show in Section~\ref{section:results}.
 
-
 \setcounter{figure}{0}  \renewcommand{\thefigure}{F.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{F.\arabic{table}}
-\input{Appendices/Methodology}
+\section{Calculating the Benfit-to-cost Ratio and the IRR}
+
+\noindent We estimate the benefit-to-cost ratio and the  internal rate of return of participation in ABC for the \textit{average participant} of the program. Let $B_{r,t}$ denote benefits and  $C_{r,t}$ denote costs for group $r$ at age $t$. Then $r$ takes either two values, $0$ for children randomized into the control group or $1$ for children randomized into the treatment group.\\ 
+
+\noindent Both $B_{r,t}$ and $C_{r,t}$ are in 2014 USD and discounted to $t = 0$. Thus, the benefits $B_t = B_{1,t} - B_{0,t}$ and costs $C_t = C_{1,t} - C_{0,t}$ associated with program participation are the differences between the counter-factual benefits and costs. We use the counter-factual notation for costs because the costs for the control group are not zero: the control group children received some services from the ABC center and some attended alternative care programs. \\
+
+\noindent The estimate for the benefit-to-cost ratio is
+\begin{align}
+\mathbf{E} \left( \frac{ \sum_{t=0}^T B_t}{\sum_{t=0}^T C_t} \right).
+\end{align}
+
+\noindent The estimate for the internal rate of return is the value $\rho$ that solves:
+
+\begin{align}
+\sum_{t=0}^T \frac{ \mathbf{E} (B_t - C_t)}{(1+\rho)^t} = 0.
+\end{align}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{G.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{G.\arabic{table}}
-\input{Appendices/ProgramCosts}
+
+\section{Accounting for Attrition} \label{appendix:attrition}
+
+\noindent We use a standard inverse probability weighting (IPW) scheme based on a logit model that predicts attrition using baseline characteristics.\footnote{\citet{Horvitz_Thompson_1952_JASA}.} We detail the identification of this scheme below. We describe our model selection process and the selected logit models in Tables \ref{table:nonipw}--\ref{table:ms_attrit_pooled} in Appendix \ref{app:method_identify}. We use the Akaike Information Criteria (AIC) to select the model with the best predictive ability. We use the same notation as in Section~\ref{section:cbamethodology} and a vector of background characteristics used in the randomization protocol; $W$ are background characteristics not used in this protocol.\\
+
+\noindent Formally, let $A=1$ denote the case where we observe $Y$ and $A=0$ denote otherwise. We assume $A$ is independent of $Y$ conditional on $Z$, $R$, $X$, and $W$. Thus,
+
+\begin{assumption} \label{ass:attr}
+	\begin{align*}
+		A \independent Y | W, Z, X, R.
+	\end{align*}
+\end{assumption}
+
+\noindent Based on this assumption, we identify $\mathbb{E}[Y_r]$ as follows:
+
+\begin{align} \label{eq:case2}
+\mathbb{E}[Y_r] & = \int y f_{Y_r|Z}(y) f_Z(z) dydz \\ \nonumber
+	           & = \int y f_{Y|Z,R=r}(y) f_Z(z) dydz \\ \nonumber
+				& = \int y f_{Y|R=r,W,Z,X}(y) f_{W,X|R=r}(w,x) f_Z(z) dydxdwdz \\ \nonumber
+				& = \int y f_{Y|R=r,W,Z,X,A=1}(y) f_{W,X|R=r,Z}(w,x) f_Z(z) dydxdwdz
+\end{align}
+\noindent where each component of \eqref{eq:case2} is straightforward to recover from the data. Using Bayes' Theorem, we can write an equivalent expression to make the IPW scheme explicit. That is, we apply Bayes' Theorem to $f_{W,X|R=r,Z}(w,x)$ and $f_Z(z)$ to obtain
+
+\begin{equation*}
+f_{W,X|R=r,Z}(w,x) = \frac{f_{W,X|R=r,Z,A=1}(w,x) P(A=1|R=r,Z)}{P(A=1|R=r,W,Z,X)}
+\end{equation*}
+and
+\begin{equation*}
+	f_Z(z) = \frac{f_{Z|R=r,A=1}(z) P(R=r,A=1)}{P(R=r,A=1|Z)}.
+\end{equation*}
+\noindent Then, we substitute these expressions into \eqref{eq:case2} to get
+
+\begin{align*} \label{eq:case2ipw}
+\mathbb{E}[Y_r] & = \int y f_{Y,X,W,Z|R=r,A=1}(y,x,w,z) \frac{P(R=r,A=1) P(A=1|R=r,Z)}{P(R=r,A=1|Z) P(A=1|R=r,W,Z,X)} dydxdwdz \\
+	            & = \int y f_{Y,X,W,Z|R=r,A=1}(y,x,w,z) \frac{P(R=r,A=1)}{P(R=r|Z) P(A=1|R=r,W,Z,X)} dydxdwdz. \\
+\end{align*}
+
+\noindent Assumption \ref{ass:attr} generalizes the matching assumption of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. It conditions not only on pre-program variables but on fully observed post-treatment variables, $X$. This enables us to account  for two types of selection:  (i) selection into treatment; and (ii) selection into item response. The corresponding sample estimator for $\mathbb{E}[Y_r]$ is
+
+\begin{align*}
+\sum_{i \in \mathcal{I}} y_i a_{i} w_{i,r} \mathbf{1}(r_i = r)
+\end{align*}
+\noindent where $\mathcal{I}$ indexes the individuals in the sample, $a_i$ indicates whether we observe $Y$ for individual $i$, and
+
+\begin{align*}
+	w_{i,r} = \frac{1}{\pi_r(z_i) \alpha(r_i,w_i,z_i,x_i)} \frac{1}{\sum_k{\frac{\mathbf{1}(r_i = r) \mathbf{1}(a_i = 1)}{\pi_r(z_k)\alpha(r_k,w_k,z_k,x_k)}}},
+\end{align*}
+\noindent with $\pi_r(z) := P(R=r|Z=z)$ and $\alpha(r,w,z,x) := P(A=1|R=r,W=w,Z=z,X=x)$. The weight $\pi_r$ corrects for selection into treatment based on pre-program variables $Z$. The weight $\alpha$ corrects for item non-response based on $R, W, Z, X$. \\
+
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{H.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{H.\arabic{table}}
-\input{Appendices/Education}
+\input{Appendices/Methodology}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{I.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{I.\arabic{table}}
+\input{Appendices/ProgramCosts}
+
+\setcounter{figure}{0}  \renewcommand{\thefigure}{J.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{J.\arabic{table}}
+\input{Appendices/Education}
+
+\setcounter{figure}{0}  \renewcommand{\thefigure}{K.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{K.\arabic{table}}
 \input{Appendices/Crime}
 
-\setcounter{figure}{0}  \renewcommand{\thefigure}{J.\arabic{figure}} % anna note: note there are two income appendices
-\setcounter{table}{0}   \renewcommand{\thetable}{J.\arabic{table}}
-\input{Appendices/Income}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{L.\arabic{figure}}
+\setcounter{figure}{0}  \renewcommand{\thefigure}{L.\arabic{figure}} % anna note: note there are two income appendices
 \setcounter{table}{0}   \renewcommand{\thetable}{L.\arabic{table}}
-\input{Appendices/Health}
-
-\setcounter{figure}{0}  \renewcommand{\thefigure}{M.\arabic{figure}}
-\setcounter{table}{0}   \renewcommand{\thetable}{M.\arabic{table}}
-\input{Appendices/Sensitivity}
+\input{Appendices/Income}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{N.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{N.\arabic{table}}
+\input{Appendices/Health}
+
+\setcounter{figure}{0}  \renewcommand{\thefigure}{O.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{O.\arabic{table}}
+\input{Appendices/Sensitivity}
+
+\setcounter{figure}{0}  \renewcommand{\thefigure}{P.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{P.\arabic{table}}
 \input{Appendices/BackoftheEnvelopeCBA}
 
 \end{appendices}
