anna done with edits! just a few left

--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -26,6 +26,6 @@ taxes, medical expenditures, and disability benefits. \\
 \noindent Health conditions are treated as absorbing states, i.e., once a person has a disease she is assumed to have it forever. A person can transition out of an obese state and back into it.  A person can quit smoking and resume smoking. We model transitions of all health conditions and risk factors with a first-order Markov process. A number of restrictions are placed on the way a disease or condition is associated with other conditions (see Section \ref{section:transition_models} for details). Like the previous literature that uses FEM and FAM, we assume that risk factors and health conditions only from the prior period determine future health, disability, and mortality (a Markov process). This Markov assumption may be a potential limitation to the accuracy of disease dynamics, but given the available follow-up data it would be difficult to implement a higher order process. Moreover, to evaluate the performance of the estimated model, we validate it using various techniques, including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.} \\
 %Include table for models, reference here or in methods?
 
-\noindent Family formation models estimate transition probabilities between the following relationship statuses:  single, cohabiting, married, separated/divorced, and widowed. We use multivariate regression models to estimate the number of children born separately for women and men. Economic models are developed to estimate labor force participation and employment status (possible states allowed by the model are: unemployed, out of the labor force, working part-time, or working full-time), earnings, and the take-up of government social insurance programs such as disability insurance. Because there is no information about assets in the Abecedarian data, we are not simulating wealth transitions.\footnote{Additional details of the transitions models are provided in \citet{Goldman_etal_2015_Future-America-Model}.} \\
+\noindent Family formation models estimate transition probabilities between the following relationship statuses:  single, cohabiting, married, separated/divorced, and widowed. We use multivariate regression models to estimate the number of children born separately for women and men. Economic models are developed to estimate labor force participation and employment status (possible states allowed by the model are: unemployed, out of the labor force, working part-time, or working full-time), earnings, and the take-up of government social insurance programs such as disability insurance. Because there is no information about assets in the ABC data, we do not simulate wealth transitions.\footnote{Additional details of the transition models are provided in \citet{Goldman_etal_2015_Future-America-Model}.} \\
 
 \noindent We simulate outcomes for cohorts that have the initial characteristics of the ABC treatment and control groups at age 30. In each year, we use the health, family, and economic transition models to predict obesity, smoking behavior, health status, economic status, family characteristics, and disability. We then use the models of health care spending to calculate total medical costs, Medicare, Medicaid, and out-of-pocket payments. We repeat the simulation each year until everyone in the cohort would have died. \\
