--- a/Appendices/Health/data.tex
+++ b/Appendices/Health/data.tex
@@ -13,14 +13,14 @@ To estimate medical care costs associated with health conditions, we use the Med
 
 \noindent We estimate the transition models using waves from 1997 to 2013. We create a dataset of respondents who have formed their own households, either
 as single heads of households, cohabiting partners, or married partners.  These heads, wives, and husbands respond to the richest
-set of PSID questions, including the health questions that are critical for our purposes. We use all respondents aged 25 and older.\footnote{While we use the full sample, we explored using a few different subsamples to better adapt to the demographics of ABC subjects.}  
+set of PSID questions, including the health questions that are critical for our purposes. We use all respondents aged 25 and older.\footnote{While we use the full sample, we explored using a few different subsamples to better adapt to the demographics of the ABC subjects.}  
 The length of the PSID is a significant advantage, because we can include past health behaviors as explanatory variables for current health outcomes. This dataset provides adequate sample sizes to explore health outcomes of specific groups. 
 PSID does not follow individuals who are institutionalized in nursing homes or other long-term care facilities. To overcome this weakness, we pool the PSID sample with the Health and Retirement Study (HRS) sample when
 estimating mortality models. \\
 
 \subsubsection{HRS}
 
-\noindent The Health and Retirement Study (HRS) is a longitudinal panel that surveys a nationally representative sample of individuals over the age of 50 and their spouses every two years.  When appropriately weighted, the HRS in 2010 is representative of US households 
+\noindent The Health and Retirement Study (HRS) is a longitudinal panel that surveys a nationally representative sample of individuals over the age of 50 and their spouses every two years.  When appropriately weighted, the HRS in 2010 is representative of U.S. households 
 where at least one member is at least 51 years old.
 This study collects in-depth information about income, work, health, and medical expenditures. In our model, waves from 1998 to 2012 are pooled with the PSID for estimation of mortality and 
 widowhood models. The HRS data
@@ -43,7 +43,7 @@ fee-for-service plans are also used to provide more accurate information on heal
 expenditures.  MCBS data from 2007 to 2010 are used for estimating medical costs and enrollment models. \\
 
 \subsubsection{MEPS}
-\noindent The Medical Expenditure Panel Survey (MEPS), which began in 1996, is a set of large-scale surveys of families and individuals, their medical providers, and employers across the US. The Household Component (HC) of the MEPS provides data from 
+\noindent The Medical Expenditure Panel Survey (MEPS), which began in 1996, is a set of large-scale surveys of families and individuals, their medical providers, and employers across the U.S. The Household Component (HC) of the MEPS provides data from 
 individual households and their members, which is supplemented by data from their medical providers. 
 The HC collects data from a representative subsample of households drawn from the 
 previous year's National Health Interview Survey (NHIS). Since NHIS does not include the 
@@ -52,7 +52,7 @@ estimate medical costs for the non-elderly (ages 25--64) population. Information
 interviews include: demographic characteristics, health conditions, health status, use of medical 
 services, sources of medical payments, and body weight and height. Each year the household survey 
 includes approximately 12,000 households, or 34,000 individuals. Sample size for those aged 25-64 is 
-about 15,800 in each year.  MEPS has comparable measures of socioeconomic status (SES) as those in PSID, 
+about 15,800 in each year.  MEPS has comparable measures of socioeconomic status as those in PSID, 
 including age, race and ethnicity, educational attainment, census region, and marital status.  We estimate medical expenditure 
 and utilization using data from 2007 to 2010. We use waves from 2001 to 2003 to estimate models of quality-adjusted life years (QALYs), due to availability of EQ-5D instrument in these waves.\footnote{Section \ref{section:FAM_models} explains the estimation of the QALY model.} \\
 
