--- a/Appendices/Health/results.tex
+++ b/Appendices/Health/results.tex
@@ -12,7 +12,7 @@
 \input{AppOutput/Health/health_at_6566_table.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: prevalence of six chronic conditions in the microsimulation exercise for the treatment and control groups by age 65, and by gender.
+\item Note: Prevalence of six chronic conditions in the microsimulation exercise for the treatment and control groups by age 65, and by gender.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -36,7 +36,7 @@
 \end{subfigure}
 \floatfoot{
 \footnotesize
-\noindent Note: Panel (a) displays the predicted Quality-Adjusted Life Years (QALYs) from age 30 for males, conditional on survival. Panel (b)displays the predicted Quality-Adjusted Life Years (QALYs) from age 30 for females, conditional on survival.
+\noindent Note: Panel (a) displays the predicted Quality-Adjusted Life Years (QALYs) from age 30 for males, conditional on survival. Panel (b) displays the predicted Quality-Adjusted Life Years (QALYs) from age 30 for females, conditional on survival.
 }
 \end{figure}
 \begin{figure}[H]
@@ -55,11 +55,11 @@
 \end{subfigure}
 \floatfoot{
 \footnotesize
-\noindent Note: Panel (a) displays the predicted total medical costs for males over the life-cycle from age 30 in 2009 USD, conditional on survival. Panel (b) displays the predicted total medical costs for females over the life-cycle from age 30 in 2009 USD, conditional on survival.
+\noindent Note: Panel (a) displays the predicted total medical costs for males over the life cycle from age 30 in 2009 USD, conditional on survival. Panel (b) displays the predicted total medical costs for females over the life-cycle from age 30 in 2009 USD, conditional on survival.
 }
 \end{figure}
 
-\noindent Figure~\ref{figure:qaly} shows that predicted QALYs are higher over the entire life-cycle for the treatment group than for the control group. This difference appears to be larger for males. This is not surprising, given that males show larger treatment effects in prevalence rates of disease than do females. Similarly, projected total medical costs are lower for the treatment group than for the control group over the entire life-cycle, as shown in Figure~\ref{figure:totmd}.
+\noindent Figure~\ref{figure:qaly} shows that predicted QALYs are higher over the entire life cycle for the treatment group than for the control group. This difference appears to be larger for males. This is not surprising, given that males show larger treatment effects in prevalence rates of disease than do females. Similarly, projected total medical costs are lower for the treatment group than for the control group over the entire life-cycle, as shown in Figure~\ref{figure:totmd}.
 Figure~\ref{figure:fam_survival} shows estimates of the survival probability for the treatment and control groups in FAM. There is a substantial difference in survival rates in favor of males in the treatment group when compared with those in the control group. \\
 
 
@@ -79,7 +79,7 @@ Figure~\ref{figure:fam_survival} shows estimates of the survival probability for
 \end{subfigure}
 \floatfoot{
 \footnotesize
-\noindent Note 1 Panel (a) displays the predicted survival for males after age 30 interview. Panel (b) displays the predicted survival for females after age 30 interview. Individual-level survival probabilities are calculated by estimating age-specific mortality probabilities for each subject using the FAM simulation results.  The individual-level survival probabilities are then averaged over the number of subjects in each group who had completed the age 34 interview.
+\noindent Note 1 Panel (a) displays the predicted survival for males after age-30 interview. Panel (b) displays the predicted survival for females after age-30 interview. Individual-level survival probabilities are calculated by estimating age-specific mortality probabilities for each subject using the FAM simulation results.  The individual-level survival probabilities are then averaged over the number of subjects in each group who had completed the age 34 interview.
 }
 \end{figure}
 
@@ -93,7 +93,7 @@ Figure~\ref{figure:fam_survival} shows estimates of the survival probability for
 \input{AppOutput/Health/PDV.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: this table summarizes the present discounted value at birth, at a 4\% annual discount rate in 2014 USD, of the health outcomes measured through QALYs, net of medical costs, from age 30 until death. \\
+\item Note: This table summarizes the present discounted value at birth, at a 4\% annual discount rate in 2014 USD, of the health outcomes measured through QALYs, net of medical costs, from age 30 until death. \\
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
