--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -40,7 +40,7 @@ the discount rate, especially for males.
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/bcr_discount_m1.eps}
 	\end{subfigure}
 	\floatfoot{
-	\noindent Note: these graphs display how the benefit-cost ratios change
+	\noindent Note: These graphs display how the benefit-cost ratios change
 	for females and males as we vary the rate at which we discount to obtain the 
 	present value. 
 	The red line indicates a benefit-cost ratio of 1. 
@@ -90,7 +90,7 @@ represents a \$0.25 increment in the cost of welfare per dollar of tax revenue).
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/irr_dwl_m1.eps}
 	\end{subfigure}
 	\floatfoot{
-	\noindent Note: these graphs display how the internal rate of return changes
+	\noindent Note: These graphs display how the internal rate of return changes
 	for females and males as we vary the marginal cost of welfare.
 	The hollow circle represents our actual estimates, whereas the
 	solid dots represent the alternative estimates we obtain by varying the marginal
@@ -127,7 +127,7 @@ and Medicaid, as well as the program costs.
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/bcr_dwl_m1.eps}
 	\end{subfigure}
 	\floatfoot{
-	\noindent Note: these graphs display how the benefit-cost ratio changes
+	\noindent Note: These graphs display how the benefit-cost ratio changes
 	for females and males as we vary the marginal cost of welfare.  
 	The red line indicates a benefit-cost ratio of 1. 
 	The hollow circle represents our actual estimates, whereas the
@@ -143,7 +143,7 @@ and Medicaid, as well as the program costs.
 \subsection{Varying Component Magnitudes}
 \label{app:sa_factors}
 
-\noindent Below we explore how the internal rate of return and benefit-cost ratio change as
+\noindent Below we explore how the internal rate of return (IRR) and benefit-cost ratio change as
 we increase and decrease the value of each component of the benefit and cost streams. This entails
 multiplying each component by factors ranging from 0 to 3. A factor of 0 is equivalent
 to removing the component entirely from our analysis. In the particular
@@ -155,9 +155,9 @@ being worth \$450,000 (all values are in 2014 USD). \\
 
 \noindent Figure \ref{fig:irrf_factor_f} displays how the IRR for females
 changes as we multiply each component by a factor between 0 and 3. We find that the IRR
-is stable across different levels of public-transfer income, QALYs, health costs, criminal 
-costs, and control contamination costs. Parental income has the biggest effect on the IRR, 
-and is the only component for which the alternative IRR falls outside of the 80\% confidence 
+is stable across different levels of public-transfer income, QALYs, health costs, and criminal 
+costs. Parental income has the biggest effect on the IRR, 
+and is one of the only components for which the alternative IRR falls outside of the 80\% confidence 
 interval of the original estimate. This occurs when we double the parental income component in the
 flow of benefits. By tripling the component, we obtain an IRR exceeding 100\%, which we
 do not display in the chart above. This sensitivity is due to both the magnitude of the
@@ -236,12 +236,12 @@ to labor income, as schooling costs are borne at earlier stages of each subject'
 \ContinuedFloat	
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
-	\caption{Control Contamination Costs} \label{fig:irrf_cc_f1}
+	\caption{Control Substitution Costs} \label{fig:irrf_cc_f1}
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/irrf_cc_f1.eps}
 	\end{subfigure}
 	
 	\floatfoot{
-	\noindent Note: these graphs display how the internal rate of return changes
+	\noindent Note: These graphs display how the internal rate of return changes
 	for females as we multiply each component by a factor from 0 to 3. 
 	The hollow circle represents our actual estimates, whereas the
 	solid dots represent the alternative estimates we obtain by varying the 
@@ -255,10 +255,10 @@ to labor income, as schooling costs are borne at earlier stages of each subject'
 
 \noindent Figure \ref{fig:irrf_factor_m} displays how the IRR for males changes as we vary the magnitude
 of each component of the benefits and costs. Our findings for males are similar to
-those for females: the IRR is insensitive to changes in public-transfer income, QALYs, health costs, and control contamination costs. 
+those for females: the IRR is insensitive to changes in public-transfer income, QALYs, and health costs. 
 As the parental income and the program cost components for the female subsample is 
 the same as those of the male subsample, we also observe that the IRR for males 
-is sensitive to changes in both of these components. 
+is sensitive to changes in both of these components. The IRR for males is similarly sensitive to increasing the weight of the cost of control substitution. Compared to females, however, as the weight increases, the internal rate of return increases at a much faster rate. This is a product of the different populations of males and females who were enrolled in alternative preschools.
 The IRR for the male subsample is a little less sensitive to changes in labor income
 and education costs than for the female subsample, but we still observe in Figure \ref{fig:irrf_factor_m}
 that the IRR for males rises as we multiply the benefits stemming from those components 
@@ -333,12 +333,12 @@ benefit of ABC for males.
 \ContinuedFloat		
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
-	\caption{Control Contamination Costs} \label{fig:irrf_cc_m1}
+	\caption{Control Substitution Costs} \label{fig:irrf_cc_m1}
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/irrf_cc_m1.eps}
 	\end{subfigure}
 	
 	\floatfoot{
-	\noindent Note: these graphs display how the internal rate of return changes
+	\noindent Note: These graphs display how the internal rate of return changes
 	for males as we multiply each component by a factor from 0 to 3. 
 	The hollow circle represents our actual estimates, whereas the
 	solid dots represent the alternative estimates we obtain by varying the 
@@ -427,12 +427,12 @@ education costs.
 \ContinuedFloat		
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
-	\caption{Control Contamination Costs} \label{fig:bcrf_cc_f1}
+	\caption{Control Substitution Costs} \label{fig:bcrf_cc_f1}
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/bcrf_cc_f1.eps}
 	\end{subfigure}
 	
 	\floatfoot{
-	\noindent Note: these graphs display how the benefit-cost ratio changes
+	\noindent Note: These graphs display how the benefit-cost ratio changes
 	for females as we multiply each component by a factor from 0 to 3. 
 	The red line indicates a benefit-cost ratio of 1. 
 	The hollow circle represents our actual estimates, whereas the
@@ -448,7 +448,7 @@ education costs.
 \noindent Figure \ref{fig:bcrf_factor_m} displays how the benefit-cost ratio for males varies
 as we multiply each component of the benefits and costs by a factor between 0 and 3.
 We observe that the ratio is insensitive to the scaling of public-transfer income, health costs,
-education costs, and control contamination costs. Barring program costs, the components that
+education costs, and control substitution costs. Barring program costs, the components that
 vary the benefit-cost ratio the most are crime costs, parental income, labor income,
 health expenditure, and QALYs, in that order. This is simply a result of the relevant 
 magnitude of each of those components in the benefits stream after discounting. 
@@ -522,12 +522,12 @@ magnitude of each of those components in the benefits stream after discounting.
 \ContinuedFloat		
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
-	\caption{Control Contamination Costs} \label{fig:bcrf_cc_m1}
+	\caption{Control Substitution Costs} \label{fig:bcrf_cc_m1}
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/bcrf_cc_m1.eps}
 	\end{subfigure}
 	
 	\floatfoot{
-	\noindent Note: these graphs display how the benefit-cost ratio changes
+	\noindent Note: These graphs display how the benefit-cost ratio changes
 	for males as we multiply each component by a factor from 0 to 3. 
 	The red line indicates a benefit-cost ratio of 1. 
 	The hollow circle represents our actual estimates, whereas the
